crates/tests/fixtures/compile_errors/strict_boolean_if_else.fe
contract Foo:
    pub def bar(val: u256) -> u256:
        if val:
            return 5
        else:
            return 1
